# FOEL-AttestNotater

robot_framework/: process.py
robot_framework/goAPI/: .flake8  .pylintrc  helper_functions.py  journalize_process.py  pyproject.toml  test_main.py
